# CG

./: CMakeLists.txt  GraphicsFrame.cpp  GraphicsFrame.h  Shape.cpp  Shape.h  aShape.cpp  aShape.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nomes.txt
src/: Camera.h
src/2d/matrix/: Matrix3x3.h
src/2d/shapes/: Point.h  Square.h
src/2d/viewport/: Viewport.h
src/2d/window/: Window.h
src/3d/matrix/: Matrix4x4.h
src/3d/shapes/: Line3D.h  Point3D.h  Polygon3D.h  Shape3D.h
src/3d/vector/: Vector3D.h
src/3d/window/: Window3D.h
src/matrix/: Matrix3x3.h  Matrix4x4.h
src/objreader/: ObjLoader.cpp  ObjLoader.h
src/shapes/: Line.h  Line3D.h  Point.h  Point3D.h  Polygon.h  Polygon3D.h  Shape.h  Shape3D.h
src/vector/: Vector2D.h  Vector3D.cpp  Vector3D.h
src/viewport/: Viewport.h
src/window/: Window.h  Window3D.h
